Updates to copy of individual supporter email

--- a/app/views/devise_mailer/_individual_confirmation.html.erb
+++ b/app/views/devise_mailer/_individual_confirmation.html.erb
@@ -14,13 +14,13 @@
 
 <p>As an ODI Individual Supporter we hope you will also:</p>
 
-<h3>Join the conversation</h3>
+<h3>Connect and collaborate</h3>
 
 <p>Connect with our global network of corporates, startups, universities and public sector organisations by joining the <%= link_to "LinkedIn members' group", "https://www.linkedin.com/groups?gid=5161407" %>. For the latest on open data events and news follow <%= link_to '@UKODImembers', 'https://twitter.com/UKODImembers' %> and <%= link_to '@ODIHQ', 'https://twitter.com/ODIHQ' %> on Twitter.</p>
 
 <h3>Stay ahead of the curve</h3>
 
-<p>Sign up to our membership newsletter, which we’ll ping you on the third Friday of every month. You’ll also receive priority notification of ODI Summit discounts and selected access to other ODI events.</p>
+<p>Sign up to our monthly membership e-newsletter and receive priority notification of ODI Summit discounts and selected access to other ODI events.</p>
 
 <h3>Boost your skills</h3>
 
@@ -34,11 +34,16 @@
 
 <p>If you want to learn more about open data, take a look at our <%= link_to 'case studies', 'http://theodi.org/case-studies' %>, technical open data <%= link_to 'guides', 'http://theodi.org/guides' %>, the ODI <%= link_to 'lecture archive', 'http://theodi.org/lunchtime-lectures' %> and our latest news and <%= link_to 'video content', 'http://vimeo.com/theodiuk' %>.</p>
 
-<p>Your membership officially runs from <%= Date.today.to_formatted_s(:long_ordinal) %> to <%= (Date.today + 12.months).to_formatted_s(:long_ordinal) %>. Your contract is attached to this email. We’ll get in touch one month before your membership is due for renewal, and your membership will auto-renew unless you let us know otherwise. We hope that you will enjoy being an ODI Supporter and that you’ll stay a part of our global network for the years to come.</p>
+<p>Your membership officially runs from <%= Date.today.to_formatted_s(:long_ordinal) %> to <%= (Date.today + 12.months).to_formatted_s(:long_ordinal) %> and costs £90 + VAT. Your membership terms and conditions are attached to this email. If you’ve changed your mind then you have the <%= link_to 'right to cancel', 'http://bit.ly/ODIcancellation' %> within the first 14 days from the start of your membership. We’ll get in touch one month before your membership is due to expire and invite you to renew for another year. We hope that you will enjoy being an ODI Supporter and that you’ll stay a part of our global network for the years to come.</p>
 
 <p>If you have any questions or suggestions, please do get in touch by emailing <%= link_to 'members@theodi.org', 'mailto:members@theodi.org' %>.</p>
 
 <p>Best wishes,<br />
 <br />
-Georgia, Carl, Andrea, Patrik and Clara<br />
-The ODI Membership team</p>
+The ODI Membership team<br />
+<br />
+Open Data Institute<br />
+3rd Floor, 65 Clifton Street, London, EC2A 4JE<br />
+Company number 08030289<br />
+members@theodi.org
+</p>
