Contract only runs up until the day before the same day next year.
365 days usually, but possibly 366 on leap years.

--- a/app/views/devise_mailer/_individual_confirmation.html.erb
+++ b/app/views/devise_mailer/_individual_confirmation.html.erb
@@ -43,7 +43,7 @@
 
 <p>If you want to learn more about open data, take a look at our <%= link_to 'case studies', 'http://theodi.org/case-studies' %>, technical open data <%= link_to 'guides', 'http://theodi.org/guides' %>, the ODI <%= link_to 'lecture archive', 'http://theodi.org/lunchtime-lectures' %> and our latest news and <%= link_to 'video content', 'http://vimeo.com/theodiuk' %>.</p>
 
-<p>Your membership officially runs from <%= Date.today.to_formatted_s(:long_ordinal) %> to <%= (Date.today + 12.months).to_formatted_s(:long_ordinal) %> and costs £90 + VAT. Your membership terms and conditions are attached to this email. If you’ve changed your mind then you have the <%= link_to 'right to cancel', 'http://bit.ly/ODIcancellation' %> within the first 14 days from the start of your membership.</p>
+<p>Your membership officially runs from <%= Date.today.to_formatted_s(:long_ordinal) %> to <%= (Date.yesterday + 1.year).to_formatted_s(:long_ordinal) %> and costs £90 + VAT. Your membership terms and conditions are attached to this email. If you’ve changed your mind then you have the <%= link_to 'right to cancel', 'http://bit.ly/ODIcancellation' %> within the first 14 days from the start of your membership.</p>
 
 <p>We’ll get in touch one month before your membership is due to expire and invite you to renew for another year. We hope that you will enjoy being an ODI Supporter and that you’ll stay a part of our global network for the years to come.</p>
 
