Small copy changes to email

--- a/app/views/devise_mailer/_individual_confirmation.html.erb
+++ b/app/views/devise_mailer/_individual_confirmation.html.erb
@@ -29,11 +29,11 @@
 
 <h3>Stay ahead of the curve</h3>
 
-<p>Sign up to our monthly membership e-newsletter and receive priority notification of ODI Summit discounts and selected access to other ODI events.</p>
+<p>We’ll be pinging you through the membership e-newsletter every month and receive priority notification of ODI Summit discounts and selected access to other ODI events.</p>
 
 <h3>Boost your skills</h3>
 
-<p>As an ODI Supporter, you can claim an exclusive 20% discount on all Open Data Institute training. Whether you’re interested in law, business or finding stories in open data, browse our specialist <%= link_to 'public training courses', 'http://theodi.org/courses' %> and book your place by selecting an ‘ODI Member’ ticket on the course page.</p>
+<p>As an ODI Supporter, you can claim an exclusive 20% discount on Open Data Institute training. Whether you’re interested in law, business or finding stories in open data, browse our specialist <%= link_to 'public training courses', 'http://theodi.org/courses' %> and book your place by selecting an ‘ODI Member’ ticket on the course page.</p>
 
 <h3>Get inspired</h3>
 
