Add more grammar

--- a/app/views/devise_mailer/_individual_confirmation.html.erb
+++ b/app/views/devise_mailer/_individual_confirmation.html.erb
@@ -29,7 +29,7 @@
 
 <h3>Stay ahead of the curve</h3>
 
-<p>We’ll be pinging you through the membership e-newsletter every month and receive priority notification of ODI Summit discounts and selected access to other ODI events.</p>
+<p>We’ll be pinging you through the membership e-newsletter every month and and you’ll also receive priority notification of ODI Summit discounts and selected access to other ODI events.</p>
 
 <h3>Boost your skills</h3>
 
