Correct initial logo download link

--- a/app/views/members/_badge_download.html.erb
+++ b/app/views/members/_badge_download.html.erb
@@ -40,7 +40,7 @@
               <%= image_tag "badges/black/170px.png", id: 'download-preview' %>
             </div>
             <p>
-              <%= link_to "Download", "badges/black/170px.png", id: 'download-link' %>
+              <%= link_to "Download", "/logos/supporter/170/black.png", id: 'download-link' %>
             </p>
           </div>
 
