--- a/app/views/devise/registrations/_member_details.html.erb
+++ b/app/views/devise/registrations/_member_details.html.erb
@@ -1,6 +1,6 @@
 <fieldset>
 
-  <legend>Your details</legend>
+  <legend>We just need a few of your details</legend>
 
   <div class="control-group">
   	<%= f.label :contact_name, :class => 'control-label' %>
@@ -13,7 +13,7 @@
   	<%= f.label :email, :class => 'control-label' %>
   	<div class="controls">
   		<%= f.email_field :email, :required => 'required' %>
-		<span class="help-inline">(required)</span>
+      <span class="help-inline">(required)</span>
   	</div>
   </div>
 
@@ -28,13 +28,7 @@
     <div class="control-group">
       <%= f.label :organization_size, :class => 'control-label' %>
       <div class="controls">
-        <%= f.select(:organization_size, {
-            "less than 10 employees"   => '<10',
-            "10 - 50 employees"        => '10-50',
-            "51 - 250 employees"       => '51-250',
-            "251 - 1000 employees"     => '251-1000',
-            "more than 1000 employees" => '>1000'
-          }, prompt: "Please select") %>
+        <%= f.select(:organization_size, Member::ORGANISATION_SIZES, prompt: "Please select") %>
         <span class="help-inline">(required)</span>
       </div>
     </div>
@@ -42,22 +36,20 @@
     <div class="control-group">
       <%= f.label :organization_type, :class => 'control-label'  %>
       <div class="controls">
-        <%= f.select(:organization_type, {
-            "Corporate"                => "commercial",
-            "Nonprofit / Government"   => "non_commercial"
-          }, prompt: "Please select") %>
+        <%= f.select(:organization_type, Member::ORGANISATION_TYPES, prompt: "Please select") %>
         <span class="help-inline">(required)</span>
       </div>
     </div>
-  <% end %>
 
-  <div class="control-group">
-    <%= f.label :organization_sector, :class => 'control-label'  %>
-    <div class="controls">
-      <%= f.select(:organization_sector, Member.sectors, prompt: "Please select") %>
-      <span class="help-inline">(required)</span>
+    <div class="control-group">
+      <%= f.label :organization_sector, :class => 'control-label'  %>
+      <div class="controls">
+        <%= f.select(:organization_sector, Member.sectors, prompt: "Please select") %>
+        <span class="help-inline">(required)</span>
+      </div>
     </div>
-  </div>
+
+  <% end %>
 
   <div class="control-group">
   	<%= f.label :telephone, :class => 'control-label' %>
@@ -88,11 +80,10 @@
     </div>
 
   </fieldset>
-<% end %>
 
-<fieldset>
+  <fieldset>
 
-  <% unless individual? %>
+    <legend>How would you like to pay?</legend>
 
     <div class="control-group">
     	<%= f.label :payment_method, :class => 'control-label' %>
@@ -108,49 +99,53 @@
     	</div>
     </div>
 
-  <% end %>
-
-  <script>
-    function show_payment_options() {
-      selected = $('input:radio[name="member[payment_method]"]:checked').val();
-      if (selected == undefined) {
-        $('#card-details').slideDown();
-      } else {
-        $('#card-details').slideUp();
-        $('#invoice-details').slideUp();
-        if (selected == "invoice") {
-          $('#invoice-details').slideDown();
-        }
-        if (selected == "credit_card") {
-          $('#card-details').slideDown();
-        }
-      }
-    }
-
-    $(document).ready(function() {
-      $('#invoice-details').hide();
-      show_payment_options();
-
-      $('input[name="member[payment_method]"]:radio').change(function () {
-        show_payment_options();
-      });
-    });
-  </script>
-
-
-  <% unless individual? %>
-
-    <div id='invoice-details'>
-
-      <div class="control-group">
-        <%= f.label :purchase_order_number, :class => 'control-label' %>
-        <div class="controls">
-          <%= f.text_field :purchase_order_number %>
-        </div>
+    <div id='invoice-details' class="control-group">
+      <%= f.label :purchase_order_number, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.text_field :purchase_order_number %>
       </div>
-
+      <%= f.label :street_address, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.text_field :street_address %>
+      </div>
+      <%= f.label :address_locality, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.text_field :address_locality %>
+      </div>
+      <%= f.label :address_region, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.text_field :address_region %>
+      </div>
+      <%= f.label :address_country, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.text_field :address_country %>
+      </div>
+      <%= f.label :postal_code, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.text_field :postal_code %>
+      </div>
     </div>
 
-  <% end %>
+  </fieldset>
+<% end %>
 
-</fieldset>
+<script>
+
+  function show_payment_options() {
+    switch($('input:radio[name="member[payment_method]"]:checked').val()) {
+    case "invoice":
+      $('#invoice-details').slideDown();
+      break;
+    case "credit_card":
+      $('#invoice-details').slideUp();
+      break;
+    }
+  }
+
+  $(document).ready(function() {
+    $('#invoice-details').hide();
+    show_payment_options();
+
+    $('input[name="member[payment_method]"]:radio').change(show_payment_options);
+  });
+</script>
