--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,13 +7,13 @@
 	  This won't take longer than a couple of minutes!
   </p>
 
-	<%= f.hidden_field :product_name, :value => params[:level] || @member.product_name %>
+	<%= f.hidden_field :product_name %>
 
   <%= render :partial => 'member_details', :locals => { :f => f } %>
 
   <fieldset>
 
-    <legend>Password</legend>
+    <legend>Please choose a password</legend>
 
     <div class="control-group">
   		<%= f.label :password, :class => 'control-label' %>
