include coupon code in redirect to chargify

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,8 @@
 	  This won't take longer than a couple of minutes!
   </p>
 
-	<%= f.hidden_field :product_name %>
+  <%= hidden_field_tag(:coupon, params[:coupon]) if params[:coupon].present? %>
+  <%= f.hidden_field :product_name %>
 
   <%= render :partial => 'member_details', :locals => { :f => f } %>
 
