--- a/app/views/shared/_a1webstats.html.erb
+++ b/app/views/shared/_a1webstats.html.erb
@@ -10,3 +10,25 @@
   </script>
 
 <% end %>
+
+<% if ENV['WHOISVISITING_STATS_ID'] %>
+
+  <script type="text/javascript">
+      (function (n) {
+          var u = window.location.href;
+          var p = u.split("/")[0];
+          var t = n.createElement("script"), i;
+          t.type = "text/javascript";
+          t.async = !0;
+          t.src = p + "//dashboard.whoisvisiting.com/who.js";
+          i = n.getElementsByTagName("script")[0];
+          i.parentNode.insertBefore(t, i)
+      })(document);
+
+          var whoparam = whoparam || [];
+          whoparam.push(["AcNo", "<%= ENV['WHOISVISITING_STATS_ID'] %>"]);
+          whoparam.push(["SendHit", ""]
+      );
+  </script>
+  
+<% end %>
