Update_twitter_handle
Now using @ODIHQmembers

--- a/app/views/devise_mailer/_individual_confirmation.html.erb
+++ b/app/views/devise_mailer/_individual_confirmation.html.erb
@@ -25,7 +25,7 @@
 
 <h3>Connect and collaborate</h3>
 
-<p>Connect with our global network of corporates, startups, universities and public sector organisations by joining the <%= link_to "LinkedIn members' group", "https://www.linkedin.com/groups?gid=5161407" %>. For the latest on open data events and news follow <%= link_to '@UKODImembers', 'https://twitter.com/UKODImembers' %> and <%= link_to '@ODIHQ', 'https://twitter.com/ODIHQ' %> on Twitter.</p>
+<p>Connect with our global network of corporates, startups, universities and public sector organisations by joining the <%= link_to "LinkedIn members' group", "https://www.linkedin.com/groups?gid=5161407" %>. For the latest on open data events and news follow <%= link_to '@ODIHQmembers', 'https://twitter.com/ODIHQmembers' %> and <%= link_to '@ODIHQ', 'https://twitter.com/ODIHQ' %> on Twitter.</p>
 
 <h3>Stay ahead of the curve</h3>
 
