--- a/app/views/devise_mailer/_individual_confirmation.html.erb
+++ b/app/views/devise_mailer/_individual_confirmation.html.erb
@@ -10,7 +10,7 @@
             <ul>
                 <li>Your membership number is <strong><%= @resource.membership_number %></strong></li>
 
-                <li>To activate your account click <%= link_to 'here', confirmation_url(@resource, :confirmation_token => @resource.confirmation_token) %></li>
+                <li>Sign in to your account <%= link_to 'here', new_member_session_url(membership_number: @resource.membership_number) %></li>
 
                 <li>You will then be able to download an ODI Supporter badge which you can display on your website and on your print collateral</li>
             </ul>
