capitalize these as they are terms

--- a/app/views/members/payment.html.erb
+++ b/app/views/members/payment.html.erb
@@ -1,5 +1,5 @@
 <p class="lead">
-Thanks for signing up to become a supporter of The Open Data Institute.
+Thanks for signing up to become a Supporter of The Open Data Institute.
 </p>
 
 <p>Being <%= indefinite_article(@member.get_plan_description) %> is <%= @member.get_plan_price %> per year.</p>
