--- a/app/views/members/thanks.html.erb
+++ b/app/views/members/thanks.html.erb
@@ -6,7 +6,7 @@ and you should be receiving a welcome email with all the information you need so
 <fieldset class="form-horizontal">
     <p>
         If you’d like to promote your membership you can 
-        <a id="badge-embed" href="#badgeContent" data-toggle="modal">Display a badge</a> on your site or
+        <a id="badge-embed" href="#badgeContent" data-toggle="modal">display a badge</a> on your site or
         <a id="badge-download" href="#badgeDownload" data-toggle="modal">download an image of your badge</a>.
     </p>
 
