--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,14 +19,16 @@
     <div class="control-group">
   		<%= f.label :password, :class => 'control-label' %>
   		<div class="controls">
-  			<%= f.password_field :password %>
+            <%= f.password_field :password, :required => :required %>
+            <span class="help-inline">(required)</span>
   		</div>
   	</div>
 
     <div class="control-group">
   		<%= f.label :password_confirmation, :class => 'control-label' %>
   		<div class="controls">
-  			<%= f.password_field :password_confirmation %>
+            <%= f.password_field :password_confirmation, :required => :required %>
+            <span class="help-inline">(required)</span>
   		</div>
   	</div>
 
