--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,6 +7,7 @@
 	  This won't take longer than a couple of minutes!
   </p>
 
+  <%= hidden_field_tag(:coupon, params[:coupon]) if params[:coupon].present? %>
   <%= f.hidden_field :origin, value: params[:origin] if params[:origin].present? %>
   <%= f.hidden_field :product_name %>
 
