The styling adds the chevron, it's not needed in the html

--- a/app/views/organizations/_summary.erb
+++ b/app/views/organizations/_summary.erb
@@ -14,7 +14,7 @@
     
     <div class='organization-description clearfix'>
       <p property="description"><%= highlight(organization_description(organization), @search) %></p>
-      <%= link_to "#{editable?(organization.member) ? "Edit" : "More"} information &raquo;".html_safe, organization.member, :class=>'btn pull-right', :title => "#{editable?(organization.member) ? "Edit" : "More"} information on #{organization.name}" %>
+      <%= link_to "#{editable?(organization.member) ? "Edit" : "More"} information".html_safe, organization.member, :class=>'btn pull-right', :title => "#{editable?(organization.member) ? "Edit" : "More"} information on #{organization.name}" %>
     </div>
   </div>
 
