Change copy to something that encourages people to continue

--- a/app/views/members/payment.html.erb
+++ b/app/views/members/payment.html.erb
@@ -1,5 +1,5 @@
 <p class="lead">
-Thanks for signing up to become a Supporter of The Open Data Institute.
+To complete your registration, please continue to the payment page.
 </p>
 
 <% case @discount %>
