--- a/app/views/members/right_to_cancel.html.erb
+++ b/app/views/members/right_to_cancel.html.erb
@@ -1,3 +1,5 @@
 <h2></h2>
 
-<p><strong>TODO:</strong> add an actual right to cancel document.</p>
+<p> In order to cancel your membership the ODI must receive your completed cancellation form by post 
+(FAO: Membership team, ODI, 65 Clifton Street, London, EC2A 4JE)or by email to <a href="mailto:members@theodi.org"> members@theodi.org </a> within 
+14 days of your Start Date. You can access the cancellation form here: <a href="http://bit.ly/ODIcancellation"http://bit.ly/ODIcancellation </a>.</p>
