--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,7 +9,7 @@
 
   <%= f.hidden_field :coupon, value: params[:coupon] if params[:coupon].present? %>
   <%= f.hidden_field :origin, value: params[:origin] if params[:origin].present? %>
-  <%= f.hidden_field :invoice, value: 1 if params[:invoice].present? %>
+  <%= f.hidden_field :invoice, value: 1 if params[:invoice].present? || @member.invoice == true %>
 
   <%= f.hidden_field :product_name %>
 
