Pass discount codes to the SignupProcessor
This is so that we can pass the discount code onto the `Invoicer` so it
eventually ends up on the invoice.

Coupons are now registered (from Chargify) with their value so that we
can look it up again based on the Member's stored coupon code when they
are queued up in the SignupProcessor.

--- a/app/views/members/payment.html.erb
+++ b/app/views/members/payment.html.erb
@@ -2,7 +2,7 @@
 To complete your registration, please continue to the payment page.
 </p>
 
-<% case @discount %>
+<% case @discount_type %>
 <% when :free %>
 <p>
     As part of this sign-up process we need to take your credit or debit card
@@ -47,7 +47,7 @@ To complete your registration, please continue to the payment page.
   <% end %>
   <div class="control-group">
     <div class="controls">
-      <input type="submit" class="btn btn-primary btn-large" value="<%= @discount == :free ? 'Enter card details' : 'Pay now' %>">
+      <input type="submit" class="btn btn-primary btn-large" value="<%= payment_button_label(@discount_type) %>">
     </div>
   </div>
 <% end %>
