--- a/app/views/devise/registrations/_member_details.html.erb
+++ b/app/views/devise/registrations/_member_details.html.erb
@@ -17,7 +17,7 @@
   	</div>
   </div>
 
-  <% unless individual? %>
+  <% unless individual? || student? %>
     <div class="control-group">
     	<%= f.label :organization_name, :class => 'control-label' %>
     	<div class="controls">
@@ -61,7 +61,7 @@
 
 </fieldset>
 
-<% unless individual? %>
+<% unless individual? || student? %>
   <fieldset>
 
     <legend>Financial information</legend>
