--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -47,13 +47,13 @@
 
   	<p>
       Please read the terms and conditions below and tick to say you accept them.
-      <% unless individual? %>
+      <% unless individual? || student? %>
         As an open organisation we publish who funds us and what our relationships are. As part of this agreement you are agreeing that we can publish your membership and our contract.
       <% end %>
     </p>
 
 <div id="terms" class="well">
-  <% if individual? %>
+  <% if individual? || student? %>
     <%= render :partial => 'individual_terms', :locals => {:member => PlaceholderPresenter.new} %>
   <% else %>
     <%= render :partial => 'terms', :locals => {:member => PlaceholderPresenter.new} %>
@@ -113,7 +113,7 @@
     <p>
     <%= f.submit "Become an ODI member", :id => 'submit', :class => 'btn btn-primary btn-large' %>
     </p>
-    <% if individual? %>
+    <% if individual? || student? %>
       <p>You have the <%= link_to 'right to cancel', right_to_cancel_members_path %> within the first 14 days of your membership.</p>
     <% end %>
   </div>
