--- a/app/views/devise_mailer/confirmation_instructions.html.erb
+++ b/app/views/devise_mailer/confirmation_instructions.html.erb
@@ -1,5 +1,7 @@
 <% if @resource.individual? %>
   <%= render(:partial => 'individual_confirmation') %>
+<% elsif @resource.student? %>
+  <%= render(:partial => 'student_confirmation') %>
 <% else %>
   <%= render(:partial => 'confirmation') %>
 <% end %>
