--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -136,7 +136,7 @@
 		    				<li><a href="http://theodi.org/privacy-policy">Privacy Policy</a></li>
 		    				<li><a href="http://theodi.org/cookie-policy">Cookie Policy</a></li>
                 <% unless current_admin %>
-                  <li><%= link_to 'Administration', admin_omniauth_authorize_path(:google_apps) %></li>
+                  <li><%= link_to "Administration", admin_omniauth_authorize_path(:google_oauth2) %></li>
                 <% end %>
 
 							</ul>
