--- a/app/views/error_mailer/membership_number_generation_failed.html.erb
+++ b/app/views/error_mailer/membership_number_generation_failed.html.erb
@@ -1,18 +1,39 @@
 <p>
-	Hi,
+  Hi,
 </p>
 
 <p>
-	Unfortunately, we've had a problem. A membership contact email was not set for a party in CapsuleCRM. 
-	This means we can't create a membership number for them.
+  Unfortunately, we've had a problem creating a membership from Capsule CRM.
+  Please check that the record in Capsule CRM has the correct information.
+</p>
+
+<p>Required fields are:</p>
+
+<p>For Organizations</p>
+
+<ul>
+  <li>Name</li>
+  <li>Email</li>
+  <li>Membership tag - Product Name</li>
+  <li>Membership tag - Email</li>
+</ul>
+
+<p>For People</p>
+
+<ul>
+  <li>First name</li>
+  <li>Last name</li>
+  <li>Email</li>
+  <li>Membership tag - Product Name</li>
+  <li>Membership tag - Email</li>
+</ul>
+
+<p>
+  To fix this, edit the member in Capsule CRM <a href='<%= @link %>'><%= @link %></a>.
 </p>
 
 <p>
-  To fix this, please add a membership email to
-  <a href='<%= @link %>'><%= @link %></a>.
+  Thanks,<br/>
+  Your friendly ODI robot
 </p>
 
-<p>
-	Thanks,<br/>
-	Your friendly ODI robot
-</p>
