Add help text to password form field

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -28,6 +28,7 @@
   		<div class="controls">
             <%= f.password_field :password, :required => :required %>
             <span class="help-inline">(required)</span>
+            <span class="help-block"><small>Password must be at least eight characters</small></span>
   		</div>
   	</div>
 
