Change ODI Node tooltip text
Fixes #478

--- a/app/views/devise/registrations/_affiliated_node.html.erb
+++ b/app/views/devise/registrations/_affiliated_node.html.erb
@@ -1,7 +1,7 @@
 <fieldset>
   <legend>
     Are you affiliated with an ODI Node?
-    <a href="#" id="what-are-nodes" data-toggle="tooltip" title="ODI Nodes are local franchises of the ODI which focus on promoting open data via learning and networking">
+    <a href="#" id="what-are-nodes" data-toggle="tooltip" title="ODI Nodes are local arms of the ODI who focus on promoting open data through learning and networking.">
       <span class="icon-question-sign" aria-hidden="true"></span>
     </a>
   </legend>
