Add "opt in to third parties" checkbox
* Added to the signup page for all member types
* Added to the member's "My Account" page
* Values are synced to and from Capsule CRM

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,12 +21,20 @@
   <% end %>
 
   <fieldset>
-    <legend>Newsletter</legend>
+    <legend>Your Communication Preferences</legend>
 
     <div class="control-group newsletter">
       <div class="controls">
         <label>
           <%= t(:receive_newsletter) %> <%= f.check_box :cached_newsletter %>
+        </label>
+      </div>
+    </div>
+
+    <div class="control-group newsletter">
+      <div class="controls">
+        <label>
+          <%= t(:share_with_third_parties) %> <%= f.check_box :cached_share_with_third_parties %>
         </label>
       </div>
     </div>
