--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -72,6 +72,14 @@
         </label>
   	</div>
 
+    <div class="control-group">
+      <div class="controls">
+        <label class='checkbox'>
+          <%= f.check_box :cached_share_with_third_parties %> <%= t(:share_with_third_parties) %>
+        </label>
+      </div>
+    </div>
+
   </fieldset>
 
   <fieldset>
