Update newsletter checkbox label
For #522

--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -68,7 +68,7 @@
     <div class="control-group">
       <div class="controls">
   		  <label class='checkbox'>
-          <%= f.check_box :cached_newsletter %> <%= t(:cached_newsletter, scope: 'activerecord.attributes.member') %>
+          <%= f.check_box :cached_newsletter %> <%= t(:receive_newsletter) %>
         </label>
   	</div>
 
